--- a/mydiary/Base.lproj/Main.storyboard
+++ b/mydiary/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="djf-LF-jFS" kind="push" id="YwR-ZA-Yc2"/>
+                                    <segue destination="djf-LF-jFS" kind="push" id="Ag2-Dw-bPi"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
